[package]
name = "bob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }
cookie = "0.18"
config = "0.14.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.35"
rand = "0.8.5"
